@@ -1,10 +1,14 @@
 package com.open3hr.adeies.services.impl;
 
 import com.open3hr.adeies.dto.EmployeeDTO;
+import com.open3hr.adeies.dto.LeaveBalanceDTO;
+import com.open3hr.adeies.dto.LeaveCategoryDTO;
 import com.open3hr.adeies.dto.LeaveRequestDTO;
 import com.open3hr.adeies.entities.Employee;
+import com.open3hr.adeies.entities.LeaveCategory;
 import com.open3hr.adeies.entities.LeaveRequest;
 import com.open3hr.adeies.repositories.EmployeeRepository;
+import com.open3hr.adeies.repositories.LeaveCategoryRepository;
 import com.open3hr.adeies.repositories.LeaveRequestRepository;
 import com.open3hr.adeies.services.EmployeeService;
 import com.open3hr.adeies.services.LeaveRequestService;
@@ -21,23 +25,36 @@ public class LeaveRequestServiceImpl implements LeaveRequestService {
 
     @Autowired
     private LeaveRequestRepository leaveRequestRepository;
+
     @Autowired
     private EmployeeRepository employeeRepository;
+
+    @Autowired
+    private LeaveCategoryRepository categoryRepository;
 
 
     @Override
     public List<LeaveRequestDTO> findAll() {
-        return leaveRequestRepository.findAll().stream().map(LeaveRequestDTO::new).toList();
+        return leaveRequestRepository.findAll()
+                .stream()
+                .map(leaveRequest -> {
+                    Optional<LeaveCategory> category = categoryRepository.findCategoryByTitle(leaveRequest.getCategory().getTitle());
+                    if(category.isPresent()){
+                        return new LeaveRequestDTO(leaveRequest, category.get());
+                    }else throw new RuntimeException("Error with leave request");
+                })
+                .toList();
     }
 
     @Override
     public LeaveRequestDTO findById(Integer id) {
         Optional<LeaveRequest> leaveRequest = leaveRequestRepository.findById(id);
         if (leaveRequest.isPresent()) {
-            return new LeaveRequestDTO(leaveRequest.get());
-        } else {
-            throw new RuntimeException("Couldn't find request with id: " + id);
-        }
+            Optional<LeaveCategory> category = categoryRepository.findCategoryByTitle(leaveRequest.get().getCategory().getTitle());
+            if(category.isPresent()){
+                return new LeaveRequestDTO(leaveRequest.get(), category.get());
+            }else throw new RuntimeException("Error Finding Leave Category");
+        } else throw new RuntimeException("Couldn't find request with id: " + id);
     }
 
     @Override
@@ -47,13 +64,15 @@ public class LeaveRequestServiceImpl implements LeaveRequestService {
 
     @Override
     public List<LeaveRequestDTO> findRequestsForAnEmployee(int id) {
-
         List<LeaveRequest> leaveRequests = leaveRequestRepository.findAll();
-
-        leaveRequests = leaveRequests.stream().filter(leaveRequest -> leaveRequest.getEmployee().getId() == id).collect(Collectors.toList());
-
-        return leaveRequests.stream().map(LeaveRequestDTO::new).toList();
+        return leaveRequests.stream()
+                .filter(leaveRequest -> leaveRequest.getEmployee().getId() == id)
+                .map(leaveRequest -> {
+                    Optional<LeaveCategory> category = categoryRepository.findCategoryByTitle(leaveRequest.getCategory().getTitle());
+                    if (category.isPresent()){
+                        return new LeaveRequestDTO(leaveRequest, category.get());
+                    }else throw new RuntimeException("Error with leave category");
+                })
+                .collect(Collectors.toList());
     }
 }
-
-
